# carros_eletricos

./: README.md  pyproject.toml  requirements.txt
data/: D_Frota_por_UF_Municipio_COMBUSTIVEL_Abril_2024.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Abril_2025.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Abril_2026.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Agosto_2024.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Agosto_2025.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Dezembro_2024.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Dezembro_2025.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Fevereiro_2024.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Fevereiro_2025.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Fevereiro_2026.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Janeiro_2024.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Janeiro_2025.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Janeiro_2026.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Julho_2024.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Julho_2025.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Junho_2024.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Junho_2025.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Junho_2026.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Maio_2024.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Maio_2025.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Maio_2026.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Março_2024.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Março_2025.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Março_2026.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Novembro_2025.xlsx  D_Frota_por_UF_Municipio_COMBUSTIVEL_Outubro_2025.xlsx  (+2 more)
(+3 files in other folders)
