[project]
name = "carros-eletricos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "kaleido>=1.3.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
]
